--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=mypassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.session.store-type=none
+
+denseembedding.url=http://localhost:8001/dense-embed
+sparseembedding.url=http://localhost:8001/sparse-embed
