reranked and hit 70 percent

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.session.store-type=none
 
 denseembedding.url=http://localhost:8001/dense-embed
 sparseembedding.url=http://localhost:8001/sparse-embed
+reranking.url=http://localhost:8002/rerank
