final commit julio

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.session.store-type=none
 
 denseembedding.url=http://localhost:8001/dense-embed
 sparseembedding.url=http://localhost:8001/sparse-embed
+imageembedding.url=http://localhost:8001/image-embed
 reranking.url=http://localhost:8002/rerank
